--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "engines": {
+    "node": "^8.9.1",
+    "npm": "^5.5.0"
+  },
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
